Fix Scroll To Top Of Menu Category

--- a/menu.html
+++ b/menu.html
@@ -239,6 +239,100 @@
                             </div>
                         </div>
                     </div>
+                    <div class="menu__category" id="coffee">
+                        <h3 class="menu__category__name">Випічка</h3>
+                        <div class="dish__list">
+                            <div class="dish">
+                                <div class="dish__img__wrapper">
+                                    <div class="dish__img">
+                                        <img src="./images/meat.jpg" alt="Dish Image" />
+                                    </div>
+                                </div>
+                                <div class="dish__info">
+                                    <p class="dish__name">Круасан мармеладом </p>
+                                    <p class="dish__description">
+                                        Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                        хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з
+                                        начинкою або без. Свого роду традиційний для України виріб під назвою рогалик,
+                                        але той зазвичай не готується з листкового тіста і може бути більш загнутим
+                                    </p>
+                                    <div class="dish__info__specification">
+                                        <div class="dish__price price">100 $</div>
+                                        <span class="dish__weight">100 г</span>
+                                        <span class="dish__calorie">325 Ккал.</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="dish">
+                                <div class="dish__img__wrapper">
+                                    <div class="dish__img">
+                                        <img src="./images/meat.jpg" alt="Dish Image" />
+                                    </div>
+                                </div>
+                                <div class="dish__info">
+                                    <p class="dish__name">Круасан з апельсином </p>
+                                    <p class="dish__description">
+                                        Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                        хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з
+                                        начинкою або без. Свого роду традиційний для України виріб під назвою рогалик,
+                                        але той зазвичай не готується з листкового тіста і може бути більш загнутим
+                                    </p>
+                                    <div class="dish__info__specification">
+                                        <div class="dish__price price">100 $</div>
+                                        <span class="dish__weight">100 г</span>
+                                        <span class="dish__calorie">325 Ккал.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__category" id="lanch">
+                        <h3 class="menu__category__name">Випічка</h3>
+                        <div class="dish__list">
+                            <div class="dish">
+                                <div class="dish__img__wrapper">
+                                    <div class="dish__img">
+                                        <img src="./images/meat.jpg" alt="Dish Image" />
+                                    </div>
+                                </div>
+                                <div class="dish__info">
+                                    <p class="dish__name">Круасан мармеладом </p>
+                                    <p class="dish__description">
+                                        Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                        хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з
+                                        начинкою або без. Свого роду традиційний для України виріб під назвою рогалик,
+                                        але той зазвичай не готується з листкового тіста і може бути більш загнутим
+                                    </p>
+                                    <div class="dish__info__specification">
+                                        <div class="dish__price price">100 $</div>
+                                        <span class="dish__weight">100 г</span>
+                                        <span class="dish__calorie">325 Ккал.</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="dish">
+                                <div class="dish__img__wrapper">
+                                    <div class="dish__img">
+                                        <img src="./images/meat.jpg" alt="Dish Image" />
+                                    </div>
+                                </div>
+                                <div class="dish__info">
+                                    <p class="dish__name">Круасан з апельсином </p>
+                                    <p class="dish__description">
+                                        Круаса́н — традиційний для французької та австрійської кухонь невеликий
+                                        хлібо-булочний кондитерський виріб із листкового тіста у формі півмісяця з
+                                        начинкою або без. Свого роду традиційний для України виріб під назвою рогалик,
+                                        але той зазвичай не готується з листкового тіста і може бути більш загнутим
+                                    </p>
+                                    <div class="dish__info__specification">
+                                        <div class="dish__price price">100 $</div>
+                                        <span class="dish__weight">100 г</span>
+                                        <span class="dish__calorie">325 Ккал.</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </section>
             </main>
             <footer class="footer">
